# kirinuki

./: .gitignore  pyproject.toml
kirinuki/: db.sqlite3  manage.py
kirinuki/kirinuki/: asgi.py  settings.py  urls.py  wsgi.py
kirinuki/kirinukiapp/: apps.py  forms.py  gen_gif.py  models.py  urls.py  views.py
kirinuki/kirinukiapp/migrations/: 0001_initial.py  0002_question_choice.py  0003_generategif_alter_fileupload_attach_delete_choice_and_more.py
kirinuki/kirinukiapp/templates/kirinukiapp/: index.html  upload.html  upload_complete.html
