[tool.poetry]
name = "kirinuki"
version = "0.1.0"
description = ""
authors = ["dddsuz2 <daidai121207@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
django-cleanup = "^8.0.0"
moviepy = "^1.0.3"
opencv-python = "^4.8.0.76"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
